--- a/Wox.UI.Electron/package.json
+++ b/Wox.UI.Electron/package.json
@@ -3,6 +3,9 @@
   "version": "2.0.0",
   "main": "main.js",
   "devDependencies": {
-    "electron": "^27.1.0"
+    "electron": "^27.1.0",
+    "eslint": "^8.49.0",
+    "eslint-config-prettier": "9.0.0",
+    "prettier": "3.0.2"
   }
 }
