--- a/Wox.UI.React/package.json
+++ b/Wox.UI.React/package.json
@@ -28,6 +28,7 @@
     "react-dom": "0.0.0-experimental-bbb9cb116-20231117",
     "react-hotkeys": "^2.0.0",
     "react-hotkeys-hook": "^4.4.1",
+    "react-image-gallery": "^1.3.0",
     "react-markdown": "^9.0.0",
     "react-router": "^6.16.0",
     "react-router-dom": "^6.16.0",
@@ -43,6 +44,7 @@
     "@types/react": "^18.2.15",
     "@types/react-custom-scrollbars": "^4.0.11",
     "@types/react-dom": "^18.2.7",
+    "@types/react-image-gallery": "^1.2.4",
     "@types/react-scrollbar": "^0.5.5",
     "@types/uuid": "^9.0.5",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
