--- a/.github/workflows/plugin.yml
+++ b/.github/workflows/plugin.yml
@@ -17,4 +17,5 @@ jobs:
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v5
         with:
+          title: "[Plugin Store] Update plugins version"
           add-paths: plugin-store.json
