add function: install plugins

--- a/Wox.UI.React/package.json
+++ b/Wox.UI.React/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@mui/icons-material": "^5.14.16",
+    "@mui/lab": "5.0.0-alpha.153",
     "@mui/material": "^5.14.16",
     "@mui/styled-engine-sc": "6.0.0-alpha.4",
     "axios": "^1.6.0",
