--- a/Wox.UI.Flutter/wox/pubspec.yaml
+++ b/Wox.UI.Flutter/wox/pubspec.yaml
@@ -31,13 +31,12 @@ dependencies:
   flutter:
     sdk: flutter
 
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
   window_manager: ^0.3.6
   web_socket_channel: ^2.4.0
   flutter_acrylic: ^1.1.0
+  get: ^4.6.6
+  logger: ^1.1.0
+  uuid: ^3.0.7
 
 dev_dependencies:
   flutter_test:
