Impl flutter UI [WIP]

--- a/Wox.UI.Flutter/wox/pubspec.yaml
+++ b/Wox.UI.Flutter/wox/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   get: ^4.6.6
   logger: ^1.1.0
   uuid: ^4.0.0
+  flutter_svg: ^2.0.9
+  flutter_markdown: ^0.6.18+2
 
 dev_dependencies:
   flutter_test:
