--- a/Wox.UI.Flutter/wox/pubspec.yaml
+++ b/Wox.UI.Flutter/wox/pubspec.yaml
@@ -31,7 +31,10 @@ dependencies:
   flutter:
     sdk: flutter
 
-  window_manager: ^0.3.6
+  window_manager:
+    git:
+      url: https://github.com/qianlifeng/window_manager.git
+      ref: 6f220e952e00f8f3fb3f459cb67e0d08faa752c2
   web_socket_channel: ^2.4.0
   flutter_acrylic: ^1.1.0
   get: ^4.6.6
