--- a/Wox.UI.Flutter/wox/pubspec.yaml
+++ b/Wox.UI.Flutter/wox/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   flutter_markdown: ^0.6.18+2
   path_provider: ^2.1.1
   dio: ^5.4.0
+  from_css_color: ^2.0.0
 
 dev_dependencies:
   flutter_test:
