Fix chinese font issues on windows

--- a/Wox.UI.Flutter/wox/pubspec.yaml
+++ b/Wox.UI.Flutter/wox/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   dio: ^5.4.0
   from_css_color: ^2.0.0
   path: ^1.8.3
+  chinese_font_library: ^1.1.0
 
 dev_dependencies:
   flutter_test:
