--- a/Wox.UI.Flutter/wox/pubspec.yaml
+++ b/Wox.UI.Flutter/wox/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   from_css_color: ^2.0.0
   path: ^1.8.3
   chinese_font_library: ^1.1.0
+  lpinyin: ^2.0.3
 
 dev_dependencies:
   flutter_test:
