--- a/Wox.UI.Flutter/wox/pubspec.yaml
+++ b/Wox.UI.Flutter/wox/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   chinese_font_library: ^1.1.0
   lpinyin: ^2.0.3
   syncfusion_flutter_pdfviewer: ^24.1.43
+  desktop_drop: ^0.4.4
 
 dev_dependencies:
   flutter_test:
