--- a/Wox.UI.Flutter/wox/pubspec.yaml
+++ b/Wox.UI.Flutter/wox/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   lpinyin: ^2.0.3
   syncfusion_flutter_pdfviewer: ^24.1.43
   desktop_drop: ^0.4.4
+  file_picker: ^6.1.1
 
 dev_dependencies:
   flutter_test:
