Add LSUIElement key to Info.plist
The LSUIElement key has been added to the Info.plist file. This key is used to configure whether the application's icon will appear in the dock or not. By setting it as true, the application will not appear in the dock.

--- a/Assets/Info.plist
+++ b/Assets/Info.plist
@@ -22,5 +22,7 @@
         <string>2.0.0</string>
         <key>NSHighResolutionCapable</key>
         <true/>
+        <key>LSUIElement</key>
+        <true/>
     </dict>
 </plist>
