--- a/Wox.UI.Flutter/wox/pubspec.yaml
+++ b/Wox.UI.Flutter/wox/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   desktop_drop: ^0.4.4
   file_picker: ^6.1.1
   fluent_ui: ^4.4.0
+  hotkey_manager: ^0.2.1
 
 dev_dependencies:
   flutter_test:
