--- a/Wox.Plugin.Host.Nodejs/package.json
+++ b/Wox.Plugin.Host.Nodejs/package.json
@@ -38,5 +38,6 @@
     "winston": "^3.10.0",
     "winston-daily-rotate-file": "^4.7.1",
     "ws": "^8.14.1"
-  }
+  },
+  "packageManager": "pnpm@8.15.5+sha1.a58c038faac410c947dbdb93eb30994037d0fce2"
 }
