Add open plugin setting command

--- a/Wox.UI.Flutter/wox/pubspec.yaml
+++ b/Wox.UI.Flutter/wox/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   hotkey_manager: ^0.2.1
   url_launcher: ^6.2.5
   flutter_image_slideshow: ^0.1.6
+  dynamic_tabbar: ^1.0.6
 
 dev_dependencies:
   flutter_test:
