Add support for deep linking
Deep linking capability was added to the application along with handling for custom 'wox' scheme. This change enables the application to receive and process deep links, allowing navigation to specific parts of the application from schema-formatted URLs. This will let users to directly install a new plugin from plugin store, and also improve inter-app and website-app interactions.

--- a/Wox.UI.Flutter/wox/macos/Runner/Info.plist
+++ b/Wox.UI.Flutter/wox/macos/Runner/Info.plist
@@ -26,6 +26,19 @@
 	<string>$(PRODUCT_COPYRIGHT)</string>
 	<key>NSMainNibFile</key>
 	<string>MainMenu</string>
+	<key>CFBundleURLTypes</key>
+    <array>
+        <dict>
+            <key>CFBundleTypeRole</key>
+            <string>Editor</string>
+            <key>CFBundleURLName</key>
+            <string></string>
+            <key>CFBundleURLSchemes</key>
+            <array>
+                <string>wox</string>
+            </array>
+        </dict>
+    </array>
 	<key>NSPrincipalClass</key>
 	<string>NSApplication</string>
 </dict>
