--- a/Wox.UI.Flutter/wox/pubspec.yaml
+++ b/Wox.UI.Flutter/wox/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   url_launcher: ^6.2.5
   flutter_image_slideshow: ^0.1.6
   dynamic_tabbar: ^1.0.6
+  protocol_handler: ^0.2.0
 
 dev_dependencies:
   flutter_test:
