Add Lottie image support
This commit updates a variety of dependencies including 'archive', 'lottie', and several 'syncfusion' packages. It also introduces support for Lottie animations in Wox.Image. This includes adding a Lottie enumeration to several files, creating helper functions related to Lottie in WoxImage, and handling Lottie input in ImageView.

--- a/Wox.UI.Flutter/wox/pubspec.yaml
+++ b/Wox.UI.Flutter/wox/pubspec.yaml
@@ -60,6 +60,7 @@ dependencies:
   flutter_code_editor: ^0.3.1
   flutter_highlight: ^0.7.0
   highlight: ^0.7.0
+  lottie: ^3.1.2
 
 dev_dependencies:
   flutter_test:
