--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,6 +19,8 @@ jobs:
       - uses: actions/checkout@v3
       - name: Build
         run: just release darwin-amd64
+        env:
+          KEYCHAINPWD: ${{ secrets.KEYCHAINPWD }}
       - name: Deploy nightly release amd64
         uses: WebFreak001/deploy-nightly@v3.0.0
         with:
@@ -35,6 +37,8 @@ jobs:
       - uses: actions/checkout@v3
       - name: Build
         run: just release darwin-arm64
+        env:
+          KEYCHAINPWD: ${{ secrets.KEYCHAINPWD }}
       - name: Deploy nightly release arm64
         uses: WebFreak001/deploy-nightly@v3.0.0
         with:
