chore: Update plugin store URLs to use new file names

--- a/.github/workflows/plugin.yml
+++ b/.github/workflows/plugin.yml
@@ -20,5 +20,5 @@ jobs:
           title: "[Bot] Update plugin store manifests"
           commit-message: "[Bot] Update plugin store manifests"
           branch: update-plugin-store
-          add-paths: plugin-store.json
+          add-paths: store-plugin.json
           reviewers: qianlifeng
