--- a/Wox.UI.Flutter/wox/pubspec.yaml
+++ b/Wox.UI.Flutter/wox/pubspec.yaml
@@ -61,6 +61,7 @@ dependencies:
   flutter_highlight: ^0.7.0
   highlight: ^0.7.0
   lottie: ^3.1.2
+  fuzzywuzzy: ^1.2.0
 
 dev_dependencies:
   flutter_test:
