Enhance GitHub Actions workflow by adding descriptive build job name for better clarity in CI/CD logs

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,6 +14,7 @@ jobs:
         run: make test
 
   build:
+    name: Build ${{ matrix.os }} ${{ matrix.arch }}
     needs: test
     strategy:
       matrix:
