--- a/wox.plugin.python/Makefile
+++ b/wox.plugin.python/Makefile
@@ -9,6 +9,8 @@ help:
 	@echo "  make build      - Build package"
 	@echo "  make publish    - Publish package to PyPI"
 	@echo "  make install    - Install development dependencies"
+	@echo "  make lint       - Run linting"
+	@echo "  make format     - Run formatting"
 
 clean:
 	rm -rf dist/ build/ *.egg-info/
@@ -16,7 +18,14 @@ clean:
 install:
 	uv sync --all-extras
 
-build: install clean
+lint:
+	uv run ruff check src
+	uv run mypy src
+
+format:
+	uv run ruff format src
+
+build: install clean lint format
 	uv run hatchling build
 
 publish: build
