feat(selection): Improve get selected text solution on macos, close #4022

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -25,7 +25,10 @@
     "compounds": [
         {
             "name": "Run Wox",
-            "configurations": ["Run Go", "Run Flutter"],
+            "configurations": [
+                "Run Go",
+                "Run Flutter"
+            ],
             "stopAll": true
         }
     ]
