--- a/wox.ui.flutter/wox/macos/Runner/Info.plist
+++ b/wox.ui.flutter/wox/macos/Runner/Info.plist
@@ -41,5 +41,9 @@
 	<string>MainMenu</string>
 	<key>NSPrincipalClass</key>
 	<string>NSApplication</string>
+	<key>NSApplicationActivationPolicy</key>
+	<string>accessory</string>
+	<key>LSUIElement</key>
+	<true/>
 </dict>
 </plist>
