refactor: Update build and window management configurations
- Modify Makefile to use default build configuration instead of release
- Simplify Windows window styling by removing extra window flags
- Update Flutter launcher controller to remove redundant window show method
- Update pnpm-lock.yaml to latest lockfile version
- Remove platform-specific window show workaround on Windows

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -49,7 +49,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Build
-        run: make publish
+        run: make build
         env:
           KEYCHAINPWD: ${{ matrix.needs_keychain && secrets.KEYCHAINPWD || '' }}
       - name: Upload artifact
