feat(linux): Enhance window focus and system library integration
- Add comprehensive X11 window focus handling
- Include additional system libraries (GLIB, GIO, X11) in CMake configuration
- Implement robust window focus method with X11-specific techniques
- Add detailed logging for window focus operations
- Link necessary system libraries for improved Linux platform support

--- a/wox.ui.flutter/wox/linux/CMakeLists.txt
+++ b/wox.ui.flutter/wox/linux/CMakeLists.txt
@@ -53,6 +53,9 @@ add_subdirectory(${FLUTTER_MANAGED_DIR})
 # System-level dependencies.
 find_package(PkgConfig REQUIRED)
 pkg_check_modules(GTK REQUIRED IMPORTED_TARGET gtk+-3.0)
+pkg_check_modules(GLIB REQUIRED IMPORTED_TARGET glib-2.0)
+pkg_check_modules(GIO REQUIRED IMPORTED_TARGET gio-2.0)
+pkg_check_modules(X11 REQUIRED IMPORTED_TARGET x11)
 
 # Application build; see runner/CMakeLists.txt.
 add_subdirectory("runner")
@@ -126,3 +129,10 @@ if(NOT CMAKE_BUILD_TYPE MATCHES "Debug")
   install(FILES "${AOT_LIBRARY}" DESTINATION "${INSTALL_BUNDLE_LIB_DIR}"
     COMPONENT Runtime)
 endif()
+
+target_link_libraries(${BINARY_NAME} PRIVATE flutter)
+target_link_libraries(${BINARY_NAME} PRIVATE PkgConfig::GTK)
+target_link_libraries(${BINARY_NAME} PRIVATE PkgConfig::GLIB)
+target_link_libraries(${BINARY_NAME} PRIVATE PkgConfig::GIO)
+# 链接X11库
+target_link_libraries(${BINARY_NAME} PRIVATE PkgConfig::X11)
