--- a/wox.ui.flutter/wox/linux/runner/CMakeLists.txt
+++ b/wox.ui.flutter/wox/linux/runner/CMakeLists.txt
@@ -22,5 +22,8 @@ add_definitions(-DAPPLICATION_ID="${APPLICATION_ID}")
 # Add dependency libraries. Add any application-specific dependencies here.
 target_link_libraries(${BINARY_NAME} PRIVATE flutter)
 target_link_libraries(${BINARY_NAME} PRIVATE PkgConfig::GTK)
+target_link_libraries(${BINARY_NAME} PRIVATE PkgConfig::GLIB)
+target_link_libraries(${BINARY_NAME} PRIVATE PkgConfig::GIO)
+target_link_libraries(${BINARY_NAME} PRIVATE PkgConfig::X11)
 
 target_include_directories(${BINARY_NAME} PRIVATE "${CMAKE_SOURCE_DIR}")
