feat(preview): add html preview type support
- Updated the doctor plugin to support HTML previews for version checks and update notes, improving the user experience with styled error and success messages.
- Added new localization strings for update error messages in English, Portuguese, Russian, and Chinese.
- Integrated the flutter_inappwebview package to render HTML content within the app, enhancing the display of update information.

--- a/wox.ui.flutter/wox/pubspec.yaml
+++ b/wox.ui.flutter/wox/pubspec.yaml
@@ -62,6 +62,7 @@ dependencies:
   highlight: ^0.7.0
   lottie: ^3.1.2
   fuzzywuzzy: ^1.2.0
+  flutter_inappwebview: ^6.1.5
 
 dev_dependencies:
   flutter_test:
