--- a/wox.ui.flutter/wox/pubspec.yaml
+++ b/wox.ui.flutter/wox/pubspec.yaml
@@ -41,7 +41,7 @@ dependencies:
   logger: ^2.4.0
   uuid: ^4.5.0
   flutter_svg: ^2.0.10+1
-  flutter_markdown: ^0.7.3+1
+  markdown_widget: ^2.3.2+8
   path_provider: ^2.1.4
   dio: ^5.7.0
   from_css_color: ^2.0.0
