--- a/wox.ui.flutter/wox/pubspec.yaml
+++ b/wox.ui.flutter/wox/pubspec.yaml
@@ -63,6 +63,7 @@ dependencies:
   lottie: ^3.1.2
   fuzzywuzzy: ^1.2.0
   flutter_inappwebview: ^6.1.5
+  extended_text_field: ^16.0.2
 
 dev_dependencies:
   flutter_test:
