feat(ui): rename ui application to `wox-ui` across platforms
* Updated executable names for Windows, macOS, and Linux to `wox-ui`.
* Adjusted related paths in `CMakeLists.txt` and `Makefile`.
* Modified `AppInfo.xcconfig` to reflect the new product name.

--- a/wox.ui.flutter/wox/Makefile
+++ b/wox.ui.flutter/wox/Makefile
@@ -34,6 +34,6 @@ ifeq ($(FLUTTER_TARGET),linux)
 	cp -r build/$(FLUTTER_TARGET)/x64/release/bundle $(UI_FLUTTER_DIR)/wox
 endif
 ifeq ($(FLUTTER_TARGET),macos)
-	cp -r build/$(FLUTTER_TARGET)/Build/Products/Release/wox.app $(UI_FLUTTER_DIR)
-	chmod +x $(UI_FLUTTER_DIR)/wox.app/Contents/MacOS/wox
-endif 
+	cp -r build/$(FLUTTER_TARGET)/Build/Products/Release/wox-ui.app $(UI_FLUTTER_DIR)
+	chmod +x $(UI_FLUTTER_DIR)/wox-ui.app/Contents/MacOS/wox-ui
+endif
