--- a/wox.ui.flutter/wox/windows/CMakeLists.txt
+++ b/wox.ui.flutter/wox/windows/CMakeLists.txt
@@ -4,7 +4,7 @@ project(wox LANGUAGES CXX)
 
 # The name of the executable created for the application. Change this to change
 # the on-disk name of your application.
-set(BINARY_NAME "wox")
+set(BINARY_NAME "wox-ui")
 
 # Explicitly opt in to modern CMake behaviors to avoid warnings with recent
 # versions of CMake.
