refactor(preview): remove HTML preview handling and related dependencies
* Removed unused HTML preview logic from `WoxPreviewView`.
* Eliminated references to `flutter_inappwebview` across multiple files.
* Cleaned up `pubspec.yaml` and `Podfile.lock` to reflect the removal of `flutter_inappwebview`.
* Updated `GeneratedPluginRegistrant` and `generated_plugins.cmake` to remove related plugin registrations.

--- a/wox.ui.flutter/wox/pubspec.yaml
+++ b/wox.ui.flutter/wox/pubspec.yaml
@@ -2,7 +2,7 @@ name: wox
 description: A cross-platform launcher that simply works
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.4.0 <4.0.0'
+  sdk: ">=3.4.0 <4.0.0"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -62,7 +62,6 @@ dependencies:
   highlight: ^0.7.0
   lottie: ^3.1.2
   fuzzywuzzy: ^1.2.0
-  flutter_inappwebview: ^6.1.5
   extended_text_field: ^16.0.2
 
 dev_dependencies:
@@ -81,7 +80,6 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
