fix(ui): method 'ShuntingYardParser' isn't defined with new version Microsoft.VisualStudio.2022.BuildTools

--- a/wox.ui.flutter/wox/pubspec.yaml
+++ b/wox.ui.flutter/wox/pubspec.yaml
@@ -64,6 +64,9 @@ dependencies:
   fuzzywuzzy: ^1.2.0
   extended_text_field: ^16.0.2
 
+dependency_overrides:
+  math_expressions: ^2.7.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
